# chess

./: .gitignore  README.md  chess.cabal
src/: Game.hs  Main.hs  README.md
