cabal-version:      2.4
name:               chess
version:            0.1.0.0
author:             Mason Anderson
maintainer:         masonanderson0@gmail.com

extra-source-files: README.md

executable chess
    main-is:          Main.hs
    other-modules: Game
    hs-source-dirs:   src
    build-depends:
          base ^>=4.15.1.0
        , gloss
        , gloss-juicy
        , containers
        , array
        , directory
    default-language: Haskell2010
    default-extensions: LambdaCase
